--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -14,5 +14,11 @@
   "navigationFallback": {
     "rewrite": "index.html",
     "exclude": ["*.{png,jpg,gif,svg}", "*.css"]
-  }
+  },
+  "routes": [
+    {
+      "route": "/login",
+      "redirect": "/.auth/login/aad"
+    }
+  ]
 }
