--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -17,6 +17,10 @@
   },
   "routes": [
     {
+      "route": "/secret/index.html",
+      "allowedRoles": ["authenticated"]
+    },
+    {
       "route": "/login",
       "redirect": "/.auth/login/aad"
     },
