--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "playwright test"
   },
   "dependencies": {
+    "@azure/msal-browser": "2.23.0",
     "@azure/msal-react": "1.3.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^12.1.0",
