--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -15,18 +15,34 @@
     "rewrite": "index.html",
     "exclude": ["*.{png,jpg,gif,svg}", "*.css"]
   },
+  "responseOverrides": {
+    "401": {
+      "redirect": "/login",
+      "statusCode": 302
+    }
+  },
   "routes": [
     {
-      "route": "/secret/index.html",
-      "allowedRoles": ["authenticated"]
+      "route": "/login",
+      "rewrite": "/.auth/login/aad",
+      "allowedRoles": ["anonymous", "authenticated"]
     },
     {
-      "route": "/login",
-      "redirect": "/.auth/login/aad"
+      "route": "/.auth/login/github",
+      "statusCode": 404
+    },
+    {
+      "route": "/.auth/login/twitter",
+      "statusCode": 404
     },
     {
       "route": "/logout",
-      "redirect": "/.auth/logout"
+      "redirect": "/.auth/logout",
+      "allowedRoles": ["anonymous", "authenticated"]
+    },
+    {
+      "route": "/*",
+      "allowedRoles": ["authenticated"]
     }
   ]
 }
